--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.259.1",
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.2.2",
     "koa": "^2.5.1",
@@ -28,6 +29,7 @@
     "koa-router": "^7.4.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.1",
     "@types/chai": "^4.1.3",
     "@types/jsonwebtoken": "^7.2.7",
