--- a/package.json
+++ b/package.json
@@ -6,23 +6,26 @@
   "scripts": {
     "build": "rm -rf dist && tsc",
     "build:watch": "rm -rf dist && tsc -w",
-    "clean": "rm -rf node_modules coverage dist .nyc_output",
+    "clean": "rm -rf node_modules coverage dist/src .nyc_output",
     "coverage": "nyc --exclude dist/test --reporter=html npm run test:all",
-    "lint": "tslint 'src/**/*.ts' 'test/**/*.test.ts'",
-    "start": "pm2 start dist/index.js --name koa",
-    "start:dev": "tsc-watch --onSuccess 'node --inspect=0.0.0.0:5858 dist/index.js'",
-    "test": "npm run build && mocha --exit --recursive dist/test/unit",
+    "lint": "tslint src/*.ts src/**/*.ts src/**/**/*.ts test/*.ts test/**/*.ts test/**/**/*.ts",
+    "pret": "prettier src/*.ts src/**/*.ts src/**/**/*.ts test/*.ts test/**/*.ts test/**/**/*.ts --write",
+    "start": "pm2 start dist/src/index.js --name v1",
+    "start:dev": "tsc-watch --onSuccess 'node --inspect=0.0.0.0:5858 dist/src/index.js'",
+    "test": "npm run build && mocha --exit --recursive dist/test",
+    "test:checks": "npm run build && mocha --exit dist/test/models/checks",
     "test:integration": "npm run build && mocha --exit --recursive dist/test/integration",
     "test:all": "npm run build && mocha --exit --recursive dist/test"
   },
   "author": "S-Kazuki<contact@revoneo.com>",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.259.1",
+    "aws-sdk": "^2.275.1",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
+    "joi": "^13.4.0",
     "jsonwebtoken": "^8.2.2",
-    "koa": "^2.5.1",
+    "koa": "^2.5.2",
     "koa-bodyparser": "^4.2.1",
     "koa-jwt": "^3.3.2",
     "koa-logger": "^3.2.0",
@@ -32,6 +35,7 @@
     "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.1",
     "@types/chai": "^4.1.3",
+    "@types/joi": "^13.4.0",
     "@types/jsonwebtoken": "^7.2.7",
     "@types/koa": "^2.0.46",
     "@types/koa-bodyparser": "^4.2.0",
@@ -43,7 +47,7 @@
     "mocha": "^5.2.0",
     "mocha-sinon": "^2.1.0",
     "nyc": "^12.0.2",
-    "pm2": "^2.10.4",
+    "pm2": "^3.0.0",
     "prettier": "^1.13.5",
     "tsc-watch": "^1.0.22",
     "tslint": "^5.10.0",
