--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "S-Kazuki<contact@revoneo.com>",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^2.2.2",
     "aws-sdk": "^2.275.1",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
