--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "koa-bodyparser": "^4.2.1",
     "koa-jwt": "^3.3.2",
     "koa-logger": "^3.2.0",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -43,6 +44,7 @@
     "@types/koa-router": "^7.0.28",
     "@types/mocha": "^5.2.1",
     "@types/node": "^10.3.2",
+    "@types/redis": "^2.8.6",
     "@types/sinon": "^5.0.1",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
