--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "koa-jwt": "^3.3.2",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
