--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^10.3.2",
     "@types/redis": "^2.8.6",
     "@types/sinon": "^5.0.1",
+    "@types/xml2js": "^0.4.3",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "mocha-sinon": "^2.1.0",
