--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "scripts": {
     "build": "rm -rf dist && tsc",
     "build:watch": "rm -rf dist && tsc -w",
-    "clean": "rm -rf node_modules coverage dist/src .nyc_output",
+    "clean": "rm -rf node_modules coverage dist .nyc_output",
     "coverage": "nyc --exclude dist/test --reporter=html npm run test:all",
     "lint": "tslint src/*.ts src/**/*.ts src/**/**/*.ts test/*.ts test/**/*.ts test/**/**/*.ts",
     "pret": "prettier src/*.ts src/**/*.ts src/**/**/*.ts test/*.ts test/**/*.ts test/**/**/*.ts --write",
     "start": "pm2 start dist/src/index.js --name v1",
     "start:dev": "tsc-watch --onSuccess 'node --inspect=0.0.0.0:5858 dist/src/index.js'",
     "test": "npm run build && mocha --exit --recursive dist/test",
-    "test:checks": "npm run build && mocha --exit dist/test/models/checks",
+    "test:check": "npm run build && mocha --exit dist/test/models/checks/custom_dictionary/owner_custom.test.js",
+    "test:checks": "npm run build && mocha --exit dist/test/models/checks/**/*.js",
+    "test:model": "npm run build && mocha --exit dist/test/models/owner_custom_keyword.test.js",
+    "test:models": "npm run build && mocha --exit dist/test/models/*.js",
     "test:integration": "npm run build && mocha --exit --recursive dist/test/integration",
     "test:all": "npm run build && mocha --exit --recursive dist/test"
   },
@@ -21,43 +24,42 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^2.2.2",
-    "aws-sdk": "^2.275.1",
+    "aws-sdk": "^2.368.0",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
-    "joi": "^13.4.0",
-    "jsonwebtoken": "^8.2.2",
-    "koa": "^2.5.2",
+    "joi": "^14.3.0",
+    "jsonwebtoken": "^8.4.0",
+    "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
-    "koa-jwt": "^3.3.2",
+    "koa-jwt": "^3.5.1",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "redis": "^2.8.0",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/bcryptjs": "^2.4.1",
-    "@types/chai": "^4.1.3",
-    "@types/joi": "^13.4.0",
-    "@types/jsonwebtoken": "^7.2.7",
-    "@types/koa": "^2.0.46",
-    "@types/koa-bodyparser": "^4.2.0",
-    "@types/koa-router": "^7.0.28",
-    "@types/mocha": "^5.2.1",
-    "@types/node": "^10.3.2",
-    "@types/redis": "^2.8.6",
-    "@types/sinon": "^5.0.1",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/chai": "^4.1.7",
+    "@types/joi": "^14.0.0",
+    "@types/jsonwebtoken": "^8.3.0",
+    "@types/koa": "^2.0.47",
+    "@types/koa-bodyparser": "^4.2.1",
+    "@types/koa-router": "^7.0.35",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.12.11",
+    "@types/redis": "^2.8.8",
+    "@types/sinon": "^5.0.7",
     "@types/xml2js": "^0.4.3",
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "mocha-sinon": "^2.1.0",
-    "nyc": "^12.0.2",
-    "pm2": "^3.0.0",
-    "prettier": "^1.13.5",
-    "tsc-watch": "^1.0.22",
-    "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.13.0",
-    "tslint-plugin-prettier": "^1.3.0",
-    "typescript": "^2.9.1"
+    "nyc": "^13.1.0",
+    "pm2": "^3.2.2",
+    "prettier": "^1.15.3",
+    "tsc-watch": "^1.0.31",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "typescript": "^3.2.1"
   }
 }
