--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   "author": "S-Kazuki<contact@revoneo.com>",
   "license": "ISC",
   "dependencies": {
-    "@koa/cors": "^2.2.2",
-    "aws-sdk": "^2.368.0",
+    "@koa/cors": "^2.2.3",
+    "aws-sdk": "^2.387.0",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
-    "joi": "^14.3.0",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
@@ -40,26 +40,27 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/chai": "^4.1.7",
-    "@types/joi": "^14.0.0",
+    "@types/joi": "^14.0.1",
     "@types/jsonwebtoken": "^8.3.0",
-    "@types/koa": "^2.0.47",
+    "@types/koa": "^2.0.48",
     "@types/koa-bodyparser": "^4.2.1",
-    "@types/koa-router": "^7.0.35",
+    "@types/koa-router": "^7.0.37",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^10.12.11",
-    "@types/redis": "^2.8.8",
+    "@types/node": "^10.12.18",
+    "@types/redis": "^2.8.10",
     "@types/sinon": "^5.0.7",
     "@types/xml2js": "^0.4.3",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "mocha-sinon": "^2.1.0",
     "nyc": "^13.1.0",
-    "pm2": "^3.2.2",
+    "pm2": "^3.2.8",
     "prettier": "^1.15.3",
     "tsc-watch": "^1.0.31",
-    "tslint": "^5.11.0",
+    "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.17.0",
+    "tslint-config-standard": "^8.0.1",
     "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.2.1"
+    "typescript": "^3.2.2"
   }
 }
