--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "build:watch": "rm -rf dist && tsc -w",
     "clean": "rm -rf node_modules coverage dist .nyc_output",
     "coverage": "nyc --exclude dist/test --reporter=html npm run test:all",
-    "lint": "tslint src/*.ts src/**/*.ts src/**/**/*.ts test/*.ts test/**/*.ts test/**/**/*.ts",
-    "pret": "prettier src/*.ts src/**/*.ts src/**/**/*.ts test/*.ts test/**/*.ts test/**/**/*.ts --write",
-    "start": "pm2 start dist/src/index.js --name v1",
-    "start:dev": "tsc-watch --onSuccess 'node --inspect=0.0.0.0:5858 dist/src/index.js'",
+    "lint": "tslint --fix -p tsconfig.json",
+    "start": "pm2 start",
+    "start:dev": "npm start & tsc-watch -p --onSuccess 'npm run lint'",
     "test": "npm run build && mocha --exit --recursive dist/test",
-    "test:check": "npm run build && mocha --exit dist/test/models/checks/custom_dictionary/owner_custom.test.js",
+    "test:check": "npm run build && mocha --exit dist/test/models/checks/free_dictionary/owner_free.test.js",
     "test:checks": "npm run build && mocha --exit dist/test/models/checks/**/*.js",
-    "test:model": "npm run build && mocha --exit dist/test/models/owner_custom_keyword.test.js",
-    "test:models": "npm run build && mocha --exit dist/test/models/*.js",
+    "test:model": "npm run build && mocha --exit dist/test/models/owner_free_keyword.test.js",
+    "test:models": "npm run build && mocha --exit dist/test/models/*.test.js",
     "test:integration": "npm run build && mocha --exit --recursive dist/test/integration",
     "test:all": "npm run build && mocha --exit --recursive dist/test"
   },
