--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "@types/jsonwebtoken": "^8.3.0",
     "@types/koa": "^2.0.48",
     "@types/koa-bodyparser": "^4.2.1",
+    "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.0.37",
+    "@types/koa__cors": "^2.2.3",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.18",
     "@types/redis": "^2.8.10",
