--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "jsonwebtoken": "^8.4.0",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
+    "koa-i18n": "^2.1.0",
     "koa-jwt": "^3.5.1",
+    "koa-locale": "^1.3.0",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "redis": "^2.8.0",
